# clide

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  IMPROVEMENTS.md  README.md  agents_log.md  clide  dash.py  init_db.ps1  init_db.sh  memory_bank.schema.sql  pyproject.toml  requirements.txt  speak.sh
.github/workflows/: ci.yml  lessons.yml
hooks/: install-hooks.sh  pre-commit  pre-push
migrations/: 2025-08-28-v1_1.sql
slash-commands/: clide-boot.md  clide-fix.md  clide-report.md  clide-save.md  clide-status.md
src/clide/: __init__.py  __main__.py  cli.py  config.py  db.py  utils.py
src/clide/commands/: __init__.py  backup.py  boot.py  config.py  dashboard.py  defect.py  fix.py  init.py  landmine.py  log.py  report.py  save.py  status.py  story.py
tests/: __init__.py  test_cli.py  test_commands.py  test_config.py  test_db.py  test_utils.py
tools/: sqlite-cheatsheet.md
